Bug 349932 - keyboard repeat settings have no affect
Summary: keyboard repeat settings have no affect
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard (other bugs)
Version First Reported In: 5.2.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andriy Rysin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-05 15:35 UTC by sedrubal
Modified: 2015-09-26 20:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sedrubal 2015-07-05 15:35:08 UTC
Changing the keyboard repeat settings (Delay, Rate, Turn On/Off) have no affect.

Reproducible: Always

Steps to Reproduce:
1. change settings
2. test them in the test text field
3. hit 'Apply' and test it elsewhere

Actual Results:  
You can't see changes in the test box or in any other program

Expected Results:  
It should be possible to change the settings (especially the delay (aargh))
Comment 1 David Rosca 2015-09-26 20:15:24 UTC
Git commit 080f186242b945c523a60afa54107e60bc9bc03b by David Rosca.
Committed on 26/09/2015 at 19:58.
Pushed by drosca into branch 'Plasma/5.4'.

kcm_keyboard: Fix applying repeat mode settings

set_repeat_mode was never called.

Also update default values for RepeatDelay and RepeatRate to match
values from KCM defaults.
FIXED-IN: 5.4.2
REVIEW: 125413

M  +3    -2    kcms/keyboard/keyboard_hardware.cpp

http://commits.kde.org/plasma-desktop/080f186242b945c523a60afa54107e60bc9bc03b