kcm_keyboard: Fix applying repeat mode settings

set_repeat_mode was never called.

Also update default values for RepeatDelay and RepeatRate to match
values from KCM defaults.

BUG: 349932
FIXED-IN: 5.4.2
REVIEW: 125413